<resources>
    <string name="app_name">AriasAirlines</string>
    <string name="tv_arlines">AriasAirlines</string>
    <string name="img_aerolineasArias" />
    <string name="et_from">From</string>
    <string name="et_to">To</string>
    <string name="ch_ida">Ida</string>
    <string name="check_id_vuelta">Ida y Vuelta</string>
    <string name="et_nombre">nombre</string>
    <string name="et_apellidos">Apellidos</string>
    <string name="et_direccion">Dirección</string>
    <string name="et_Phone">Teléfono</string>
    <string name="et_email">Email</string>
    <string name="rd_movilidad">Movilidad reducida</string>
    <string name="sw_id_vuelt">Ida/Vuelta</string>
    <string name="check_primeraclase">First Class </string>
    <string name="check_asientoventanilla">Ventanilla</string>
    <string name="check_mascota">Puppy</string>
    <string name="tv_eleccion">Passenger Preference</string>
    <string name="tv_comida">Meal Preference</string>
    <string name="check_breakfast">Breakfast</string>
    <string name="check_comida">Lunch</string>
    <string name="check_cena">Dinner</string>
    <string name="check_Extra">Extra Meal</string>
    <string name="bt_compramela">BUY</string>
    <string name="img_bt" />
    <string name="action_settings">action_settings</string>
    <string name="si">si</string>
    <string name="no">no</string>
    <string name="tv_Precio" />
    <string name="tv_Coste">PRECIO DEL VIAJE</string>
    <string name="tv_ListaDelViaje">Lista para tu viaje</string>
    <string name="bt_aceptar">ACEPTAR</string>
    <string name="ht_date">DATE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>