<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constrainsito"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CA1111"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/img_aerolineasArias"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/_c683f27bcb44abfbd35fcd9fe63b55e"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/et_from"
        style="@style/fontFamili"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/candal"
        android:hint="@string/et_from"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#EDE6E6"
        android:textColorHint="#E8DFDF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toStartOf="@+id/et_to"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/et_to"
        style="@style/fontFamili"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/et_to"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#F1E7E7"
        android:textColorHint="#EAE7E7"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_Eleccion"
        style="@style/fontFamili"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tv_eleccion"
        android:textColor="#EDEAEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/et_to" />

    <TextView
        android:id="@+id/textView2"
        style="@style/fontFamili"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tv_comida"
        android:textColor="#F6F0F0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tableLayut" />

    <TableLayout
        android:id="@+id/tableLayout"
        style="@style/fontFamili"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TableRow
            style="@style/fontFamili"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/check_breakfast"
                style="@style/fontFamili"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/check_breakfast"
                android:textColor="#EADFDF"
                tools:ignore="TextContrastCheck" />

            <CheckBox
                android:id="@+id/check_comida"
                style="@style/fontFamili"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/check_comida"
                android:textColor="#EADFDF"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            style="@style/fontFamili"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/check_cena"
                style="@style/fontFamili"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/check_cena"
                android:textColor="#EADFDF"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <CheckBox
                android:id="@+id/check_Extra"
                style="@style/fontFamili"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/check_Extra"
                android:textColor="#EADFDF"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayut"
        style="@style/fontFamili"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_Eleccion">

        <TableRow
            style="@style/fontFamili"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/sw_id_vuelt"
                style="@style/fontFamili"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:shadowColor="#EA1C1C"
                android:text="@string/sw_id_vuelt"
                android:textColor="#ECE4E4"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/check_primeraclase"
                style="@style/fontFamili"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/check_primeraclase"
                android:textColor="#F6EDED"
                android:textSize="12sp" />

        </TableRow>

        <TableRow
            style="@style/fontFamili"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/check_mascota"
                style="@style/fontFamili"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/check_mascota"
                android:textColor="#ECE8E8"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/check_asiento"
                style="@style/fontFamili"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/check_asientoventanilla"
                android:textColor="#EDE3E3"
                android:textSize="12sp" />

        </TableRow>

    </TableLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        style="@style/fontFamili"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_from">

        <LinearLayout
            style="@style/fontFamili"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_nombre"
                style="@style/fontFamili"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/et_nombre"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_Apellidos"
                style="@style/fontFamili"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/et_apellidos"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/et_email"
                style="@style/fontFamili"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/et_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_Phone"
                style="@style/fontFamili"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/et_Phone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_Date"
                style="@style/fontFamili"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/ht_date"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textColorHint="@color/white"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/et_dirección"
                style="@style/fontFamili"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/et_direccion"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rd_movilidadReducida"
                style="@style/fontFamili"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rd_movilidad"
                android:textColorHint="@color/white" />

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/img_bt"
        style="@style/fontFamili"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/img_bt"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_aceptar"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.425"
        app:srcCompat="@drawable/_f62718e211d499a986aa26c016316d4"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/sp_treatment"
        style="@style/fontFamili"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bt_aceptar"
        style="@style/fontFamili"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/bt_compramela"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/img_bt"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="et_from,et_to"
        tools:layout_editor_absoluteY="224dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="173dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="248dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="198dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="612dp" />

</androidx.constraintlayout.widget.ConstraintLayout>