<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constrainsito"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CA1111"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:contentDescription="@string/img_aerolineasArias"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_c683f27bcb44abfbd35fcd9fe63b55e"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/img_bt"
        android:layout_width="113dp"
        android:layout_height="84dp"
        android:contentDescription="@string/img_bt"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_aceptar"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
        app:srcCompat="@drawable/ea765eeeba944c65a8d0ea0523dbfb5c"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/bt_aceptar"
        android:layout_width="113dp"
        android:layout_height="84dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/bt_aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_bt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteY="731dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="191dp" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="418dp"
        android:layout_height="202dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/tv_ListaDelViaje"
                android:textColor="#F3E6E6"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_ListaDeViaje"
                android:layout_width="411dp"
                android:layout_height="251dp"
                android:gravity="center" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>